syntax = "proto3";

package article.v1;

option go_package = "github.com/morning-night-guild/platform-app/pkg/connect/article/v1;articlev1";

// 記事サービス
service ArticleService {
  // 共有
  rpc Share(ShareRequest) returns (ShareResponse) {}
  // 一覧
  rpc List(ListRequest) returns (ListResponse) {}
  // 削除
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  // 追加
  rpc AddToUser(AddToUserRequest) returns (AddToUserResponse) {}
  // 削除
  rpc RemoveFromUser(RemoveFromUserRequest) returns (RemoveFromUserResponse) {}
}

// 記事モデル
message Article {
  string article_id = 1;
  string url = 2;
  string title = 3;
  string description = 4;
  string thumbnail = 5;
  repeated string tags = 6;
}

// 共有リクエスト
message ShareRequest {
  string url = 1;
  string title = 2;
  string description = 3;
  string thumbnail = 4;
}

// 共有レスポンス
message ShareResponse {
  Article article = 1;
}

// 一覧リクエスト
message ListRequest {
  string page_token = 1;
  uint32 max_page_size = 2;
  optional string title = 3;
}

// 一覧レスポンス
message ListResponse {
  repeated Article articles = 1;
  string next_page_token = 2;
}

// 削除リクエスト
message DeleteRequest {
  string article_id = 1;
}

// 削除レスポンス
message DeleteResponse {}

// 追加リクエスト
message AddToUserRequest {
  string user_id = 1;
  string article_id = 2;
}

// 追加レスポンス
message AddToUserResponse {}

// 削除リクエスト
message RemoveFromUserRequest {
  string user_id = 1;
  string article_id = 2;
}

// 削除レスポンス
message RemoveFromUserResponse {}
